Fix hero layout: stack VSL centered under headline, form under VSL

--- a/index.html
+++ b/index.html
@@ -77,25 +77,27 @@
     <section id="qualify" class="relative min-h-screen pt-16 bg-navy">
         <div class="absolute inset-0 hero-overlay"></div>
         <div class="absolute inset-0 opacity-20" style="background-image: url('images/676da37984c9ee63224f16d4_exterior_vizcaya.jpg'); background-size: cover; background-position: center;"></div>
-        <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20 lg:py-28">
-            <div class="grid lg:grid-cols-2 gap-12 items-start">
-                <div>
+        <div class="relative z-10 max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-20 lg:py-28">
+                <!-- Headline & Subheadline -->
+                <div class="text-center mb-8">
                     <p class="text-accent text-sm font-semibold uppercase tracking-wider mb-4">For Accredited Investors Looking to Deploy $100K+</p>
                     <h1 class="text-white text-4xl lg:text-5xl font-bold leading-tight mb-6">Monthly Cash Flow and Peace of Mind Through Tax-Advantaged Multifamily Investments</h1>
-                    <p class="text-white/80 text-lg mb-8 leading-relaxed">Earn 25.1% average annualized returns with zero capital calls, conservative leverage, and a 200+ person in-house team managing every property. Backed by $800M+ in acquisitions since 2018.</p>
-                    <!-- VSL Placeholder -->
-                    <div class="bg-navy-light/50 rounded-lg aspect-video flex items-center justify-center mb-6 border border-white/10">
-                        <div class="text-center">
-                            <div class="w-16 h-16 bg-accent/20 rounded-full flex items-center justify-center mx-auto mb-3">
-                                <svg class="w-8 h-8 text-accent" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
-                            </div>
-                            <p class="text-white/60 text-sm">Watch the Full Investor Presentation</p>
-                        </div>
-                    </div>
+                    <p class="text-white/80 text-lg mb-6 leading-relaxed">Earn 25.1% average annualized returns with zero capital calls, conservative leverage, and a 200+ person in-house team managing every property. Backed by $800M+ in acquisitions since 2018.</p>
                     <p class="text-white/40 text-xs">*Returns represent weighted averages on realized investments. Past performance is not indicative of future results. All investments carry risk, including the potential loss of principal.</p>
                 </div>
+
+                <!-- VSL Placeholder (Centered) -->
+                <div class="max-w-3xl mx-auto mb-10 bg-navy-light/50 rounded-lg aspect-video flex items-center justify-center border border-white/10">
+                    <div class="text-center">
+                        <div class="w-16 h-16 bg-accent/20 rounded-full flex items-center justify-center mx-auto mb-3">
+                            <svg class="w-8 h-8 text-accent" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+                        </div>
+                        <p class="text-white/60 text-sm">Watch the Full Investor Presentation</p>
+                    </div>
+                </div>
+
                 <!-- Qualification Form -->
-                <div class="bg-white rounded-xl p-6 lg:p-8 shadow-2xl">
+                <div class="max-w-xl mx-auto bg-white rounded-xl p-6 lg:p-8 shadow-2xl">
                     <div class="text-center mb-6">
                         <h3 class="text-navy text-xl font-bold mb-2">See If You Qualify</h3>
                         <p class="text-slate text-sm">Answer a few quick questions to see if LSCRE is the right fit.</p>
@@ -168,7 +170,6 @@
                         </div>
                     </form>
                 </div>
-            </div>
         </div>
     </section>
 
